--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Push Notification Test</title>
-    <script type="text/javascript">
+    <script src="httpChild-without-tracker.min.js" async></script>
+    <!-- <script type="text/javascript">
       (function(p,u,s,h){
           p._pcq=p._pcq||[];
           p._pcq.push(['_currentTime',Date.now()]);
@@ -14,7 +15,8 @@
           h=u.getElementsByTagName('script')[0];
           h.parentNode.insertBefore(s,h);
       })(window,document);
-    </script>
+    </script> -->
+    <script src="/Users/shubham/Downloads/jstz.min.js"></script>
   </head>
   <body>
     A test page for push notifications.
