--- a/index.html
+++ b/index.html
@@ -3,8 +3,20 @@
   <head>
     <meta charset="utf-8">
     <title>Push Notification Test</title>
-    <!-- <script src="httpChild-without-tracker.min.js" async></script> -->
     <script type="text/javascript">
+    (function(p,u,s,h){
+        p._pcq=p._pcq||[];
+        p._pcq.push(['_currentTime',Date.now()]);
+        s=u.createElement('script');
+        s.type='text/javascript';
+        s.async=true;
+        s.src='https://cdn.pushcrewlocal.com/js/97f52e3fd7f3004f7725585a1953a9d1.js';
+        h=u.getElementsByTagName('script')[0];
+        h.parentNode.insertBefore(s,h);
+    })(window,document);
+    </script>
+    <!-- <script src="httpChild-without-tracker.min.js" async ></script> -->
+    <!-- <script type="text/javascript">
     (function(p,u,s,h){
         p._pcq=p._pcq||[];
         p._pcq.push(['_currentTime',Date.now()]);
@@ -15,7 +27,7 @@
         h=u.getElementsByTagName('script')[0];
         h.parentNode.insertBefore(s,h);
     })(window,document);
-</script>
+</script> -->
   </head>
   <body>
     A test page for push notifications.
