--- a/oneSignal/index.html
+++ b/oneSignal/index.html
@@ -10,6 +10,7 @@
         httpPermissionRequest: {
           enable: true
         },
+        path: '/push/oneSignal/',
         notifyButton: {
             enable: true /* Set to false to hide */
         }
