--- a/inner/inner2/index.html
+++ b/inner/inner2/index.html
@@ -4,32 +4,19 @@
     <meta charset="utf-8">
     <title>Push Notification Test</title>
     <script type="text/javascript">
-    (function(p,u,s,h){
-        p._pcq=p._pcq||[];
-        p._pcq.push(['_currentTime',Date.now()]);
-        s=u.createElement('script');
-        s.type='text/javascript';
-        s.async=true;
-        s.src='https://cdn.pushcrewlocal.com/js/97f52e3fd7f3004f7725585a1953a9d1.js';
-        h=u.getElementsByTagName('script')[0];
-        h.parentNode.insertBefore(s,h);
-    })(window,document);
+        (function(p,u,s,h){
+            p._pcq=p._pcq||[];
+            p._pcq.push(['_currentTime',Date.now()]);
+            s=u.createElement('script');
+            s.type='text/javascript';
+            s.async=true;
+            s.src='https://cdn.pushcrewstaging.com/js/15edfb32b89d492e079251be80b0973b.js';
+            h=u.getElementsByTagName('script')[0];
+            h.parentNode.insertBefore(s,h);
+        })(window,document);
     </script>
-    <!-- <script src="httpChild-without-tracker.min.js" async ></script> -->
-    <!-- <script type="text/javascript">
-    (function(p,u,s,h){
-        p._pcq=p._pcq||[];
-        p._pcq.push(['_currentTime',Date.now()]);
-        s=u.createElement('script');
-        s.type='text/javascript';
-        s.async=true;
-        s.src='https://cdn.pushcrewstaging.com/js/73105303fab8afa8fafc7e18917c61e7.js';
-        h=u.getElementsByTagName('script')[0];
-        h.parentNode.insertBefore(s,h);
-    })(window,document);
-</script> -->
   </head>
   <body>
-    A test page for push notifications.
+    A test page for push notifications. Inner Page. Running Staging 1.
   </body>
 </html>
